<resources>
    <string name="app_name">Remind</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="subheader_title">Categories</string>
    <string name="main_first_item">Daily routine</string>
    <string name="main_second_item">Sport</string>
    <string name="main_third_item">Medicine</string>
    <string name="main_fourth_item">Significant date</string>

    <string name="labels_subheader_title">Additional features</string>
    <string name="labels_first_item">Settings</string>

    <string name="flActBtnToAddNotificationDesc">Add a new notification</string>
    <string name="flActBtnToAddTimeDesc">Add time</string>

    <string name="text_input_name_layout_hint">Name</string>
    <string name="text_input_description_layout_hint">Description</string>

    <string name="radio_every_day">every day</string>
    <string name="radio_every_week">every week</string>
    <string name="radio_particular_day">once on a particular day</string>

    <string name="exposed_dropdown_menu_hint">Selected times</string>

    <string name="material_alert_dialog_title">Choose frequency of time</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <string name="save_category_item_text">Save a notification</string>
    <string name="clear_category_item_text">Clear a notification</string>

    <string name="notification_content_text">You have to remind something!</string>

    <string name="action_clear_all">Clear all</string>

    <string name="switch_night_theme">Dark mode</string>
    <string name="text_view_general_settings">Display options</string>

</resources>