<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_item"
        android:title="@string/subheader_title">
        <menu>
            <item
                android:id="@+id/main_first_item"
                android:title="@string/main_first_item"
                android:checkable="true"
                android:icon="@drawable/ic_main_first_item_24"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/main_second_item"
                android:title="@string/main_second_item"
                android:checkable="true"
                android:icon="@drawable/ic_main_second_item_24"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/main_third_item"
                android:title="@string/main_third_item"
                android:checkable="true"
                android:icon="@drawable/ic_main_third_item_24"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/main_fourth_item"
                android:title="@string/main_fourth_item"
                android:checkable="true"
                android:icon="@drawable/ic_main_fourth_item_24"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
    <item
        android:id="@+id/labels_item"
        android:title="@string/labels_subheader_title">
        <menu>
            <item
                android:id="@+id/labels_first_item"
                android:title="@string/labels_first_item"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_settings_24"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>